# conman

./: Cargo.toml  DESIGN.md  Makefile  README.md  STRUCTURE.md
src/: args.rs  config.rs  conman.rs  directories.rs  file.rs  git.rs  main.rs  paths.rs  state.rs
src/cache/: action.rs  branch.rs  metadata.rs  mod.rs
src/data/: config.rs  mod.rs
src/ops/: add.rs  apply.rs  clone.rs  collect.rs  diff.rs  discard.rs  edit.rs  list.rs  mod.rs  pull.rs  push.rs  remove.rs  save.rs  status.rs  verify_cache.rs
src/ops/branch/: checkout.rs  current.rs  delete.rs  list.rs  mod.rs
