[package]
name = "conman"
version = "0.1.0"
edition = "2021"
description = "manager your dotfiles securely using git"

[dependencies]
anyhow = "1.0.95"
directories = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.27", features = ["derive"] }
git2 = { version = "0.20.0", default-features = false, features = ["openssl-probe", "openssl-sys", "ssh"] }
url-parse = "1.0.10"
age = "0.11.1"
shellexpand = "3.1.0"
colored = "3.0.0"
